--- a/app/components/HeroShineTop/HeroShineTop.scss
+++ b/app/components/HeroShineTop/HeroShineTop.scss
@@ -72,6 +72,7 @@
 
 .headline {
   padding: 0 16px;
+  line-height: 1.13;
   perspective: 1000px;
 
   span,
